<resources>
    <string name="app_name">Kindle Cracker</string>
    <string name="CoordNote">X,Y are coordinate points to specify where you want make touch on the screen.</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="DestFolder">Converted File name </string>
    <string name="PrepTime">Preparation time in sec</string>
    <string name="Page">Total No. of Pages in Book.(if you don\'t know put "0")</string>
    <string name="CrackBtn">Start to Convert</string>
    <string name="StopBtn">Stop Converting</string>
    <string name="continuechkBox">Continue from old Converted PDF</string>
    <string name="compresschkBox">Compress PDF</string>
    <string name="guide">User Guide</string>
    <string name="aboutdev">Design and Developed by <b>Karunakaran</b></string>
    <string name="email">agkarun96@gmail.com</string>
    <string name="source">This application released as opensource software under GPLV3 \n You can find the soure code in <b><font color="#FF3348E9">GitHub</font></b></string>
    <string name="libtitle">Libraries Used</string>
    <string name="q1">1.What is Kindle Cracker?</string>
    <string name="q2">2.How to use?</string>
    <string name="q3">3.What is x,y coordinates?</string>
    <string name="q4">4.how to get x,y coordinates?</string>
    <string name="q5">5.what is file name?</string>
    <string name="q6">6.where the converted file will be saved?</string>
    <string name="q7">7.what is number total of pages?</string>
    <string name="q8">8.what to do if you don\'t know number of pages of the book?</string>
    <string name="q9">9.what is preparing time?</string>
    <string name="q10">10.what is continue from old converted pdf?</string>
    <string name="q11">11.what is Compress PDF?</string>
    <string name="q12">12.how to start convert from already converted pdf file?</string>


    <string name="a1">Kindle cracker is a android application for converting
        kindle books into pdf format for personal use only.</string>

    <string name="a2">
        After filling all the required value and started the application by pressing the button go to kindle app and open
        the book which you want to convert that\'s all the Kindle Cracker Will do the remaining things for you.
    </string>

    <string name="a3">
        To convert PDF from Kindle book we need to go through page by page, To achieve this we need to touch on the screen.
        So the X,Y coordinates are points where you want to touch on the screen.
    </string>


    <string name="a4">
         The X,Y coordinates are obtained from the below steps Menu > Settings > Developer options > Pointer location[Turn on]. \n\n If you don\'t have developer options in your Settings follow below steps Menu > Settings > About phone > Build number [Tap 5 or more times].
        \n\n
         After pointer location turned on go to kindle app and open your book and touch for go to next page now you can see the X,Y
	     points in the top of your display [in my phone X=617,Y=1098].
    </string>

    <string name="a5">File name is a name for your converted PDF file name.</string>


    <string name="a6">The converted files will be saved in Internal Storage > Kindle Cracker > Your File name > File_Name.pdf</string>

    <string name="a7">
        Total number of pages indicates how many pages in the book.[if you want to reduce the page numbers
	    in kindle set Margins &#8212;> Narrow, Line Spacing &#8212;> Narrow, Alignment &#8212;> Auto, Text size &#8212;> Small as much]</string>

    <string name="a8">
        If you don\'t know the number of pages in the book to convert pdf or it\'s to large to count don\'t worry just put 0.But
        Be careful it will change page infinitely, You need to manually stop if the book reached last page.
    </string>

    <string name="a9">Preparing time is a time interval for preparing the kindle App for user.The conversion will start after preparing time.</string>

    <string name="a10">
        If you want to convert 1000 pages of book but due to some reasons you want to convert 100 pages today and remaining pages
	tomorrow or some other day you can use this option.[You need to put exactly from which page you want to continue, You can see
	Page number from already converted file]
    </string>


    <string name="a11">
         The Compress option will compress the PDF file compress the size of the PDF file.[Before compressing the pdf file take a sample copy for a single page for quality check]
    </string>


    <string name="a12">
        If you want to continue conversion from already converted pdf file click the given check box and put the page number from where
	you what to convert pdf file. before starting the application go to kindle and open the book and go to the page from where you want
    to continue.[You need to put same FILE NAME for continue the conversion]
    </string>

    <string name="sugg">Suggestion: If any notification came while converting, that will also shown in the pdf so you can put the phone in flight mode.[Optional]</string>

</resources>
