<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fa8a00"
                android:gravity="center_horizontal"
                android:text="@string/guide"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <TextView
                android:text="@string/q1"
                android:textColor="#29b61a"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/a1"
                android:textColor="#344cd7"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/q2"
                android:textColor="#29b61a"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/a2"
                android:textColor="#344cd7"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/q3"
                android:textColor="#29b61a"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/a3"
                android:textColor="#344cd7"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/q4"
                android:textColor="#29b61a"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/a4"
                android:textColor="#344cd7"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/q5"
                android:textColor="#29b61a"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/a5"
                android:textColor="#344cd7"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <TextView
                android:text="@string/q6"
                android:textColor="#29b61a"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/a6"
                android:textColor="#344cd7"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/q7"
                android:textColor="#29b61a"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/a7"
                android:textColor="#344cd7"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/q8"
                android:textColor="#29b61a"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/a8"
                android:textColor="#344cd7"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/q9"
                android:textColor="#29b61a"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/a9"
                android:textColor="#344cd7"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/q10"
                android:textColor="#29b61a"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/a10"
                android:textColor="#344cd7"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/q11"
                android:textColor="#29b61a"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/a11"
                android:textColor="#344cd7"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/q12"
                android:textColor="#29b61a"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/a12"
                android:textColor="#344cd7"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:textStyle="bold"
                android:text="@string/sugg"
                android:textColor="#16288e"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>


</ScrollView>